[package]
name = "iconic"
version = "0.1.0"
authors = ["Ryan Faulhaber <faulhaberryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
# imageproc depends on ^0.21.0
image = "0.21.1"
imageproc = "0.18.0"
rand = "0.7.0"
rand_xorshift = "0.2.0"
